--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -14,6 +14,10 @@
   @apply flex justify-center max-w-xl bg-beige-100 bg-opacity-20 my-12 pt-8 px-6 overflow-hidden lg:m-0 lg:absolute lg:bottom-0 lg:right-0 lg:w-1/2;
 
   border-radius: 150px 0 150px 0;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
 }
 
 .hero__ellipse {
